# ingestor

./: .env.sample  .gitignore  .pre-commit-config.yaml  foo.py  pyproject.toml
configs/: logger.py  settings.py
connectors/data/: orchestrator.py  transformer.py
connectors/data/clients/: duck_db.py  minio.py
docker/: Dockerfile  docker-compose.yml
pipeline/core/: config.py
schemas/: database.py  storage.py
schemas/models/: h5n1.py
scripts/: airflow-init.sh  env-init.sh
src/database/: duckdb_client.py
src/schemas/: duckdb_schema.py  h5n1.py  storage.py
src/storage/: minio_client.py
src/utils/: logging.py
